feat:ui-instrument-service
